force-app/main/default/objects/Emergency__c/Emergency__c.object-meta.xml
<CustomObject>
    <label>Emergency</label>
    <nameField>
        <label>Emergency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emergencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>