force-app/main/default/objects/Emergency__c/fields/Emergency_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Type__c</fullName>
    <label>Emergency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Pandemic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>